--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,7 +42,7 @@ p
 
 .navigation ul
 {
-  margin:20px 15px 0 0;
+	margin:0;
   padding:0;
   float:right;
   list-style:none;
@@ -57,8 +57,15 @@ p
 
 .navigation ul li a
 {
+	padding:20px 10px 15px ;
+	display:inline-block;
   color:#8b8b8b;
   text-decoration:none;
+}
+
+.navigation ul li a:hover
+{
+	background:url("/images/nav_bg.jpg");
 }
 
 a.home
