--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
 			<li><a href="/features">Features</a></li>
 			<li><a href="/applications">Applications</a></li>
 			<li><a href="/specifications">Specifications</a></li>
-			<li><a href="/resellers">Resellers</a></li>
+			<li><a href="/resellers" class="reseller">Resellers</a></li>
 		</ul>
 	</div>
 	
