--- a/views/features.rhtml
+++ b/views/features.rhtml
@@ -8,6 +8,64 @@
 			technology, validated in a virtual environment and tested in the real world.  All this leveraging the latest in materials and tools to provide a motor that will redefine the next generation of this industry.</p>
 		</div>
 		<div class="right_col">
+			<ul class="accordian">
+				<li>
+					<h3>Size Matters.</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Unbelievable Torque.</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Liquid or Nitrogen.</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Built in Safety.</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Lean on Me.</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Reduced Costs.</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Acid Resistant.</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
