--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
 	<link href="/css/styles.css" rel="stylesheet" type="text/css" />
 	
 	<script type="text/javascript" src="/js/jquery.js"></script>
-	<script type="text/javascript" src="/js/scripts.js"></script>
+	<script type="text/javascript" src="/js/application.js"></script>
 	<script type="text/javascript" src="http://use.typekit.com/epq8thw.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
