--- a/views/applications.rhtml
+++ b/views/applications.rhtml
@@ -1,9 +1,69 @@
 <div class="top_bg">
-	<div class="container">
+	<div class="container clearfix">
 		<div class="left_col">
 			<img src="/images/features.png" />
 			<h2>Applications</h2>
 			<p>The coil tubing industry has expanded very quickly and with it, its additional application for downhole motors have as well.  requirement for downhole.  The M3 exceeds any present motor in its ability for clean out, heavy duty milling, window cutting and drilling environments.  Most of these applications require the M3's high torque,  elevated flow rates, ability to handle heavy loads on bit to perform the task at hand.</p>
+		</div>
+		<div class="right_col">
+			<ul class="accordian">
+				<li>
+					<h3>Underreaming</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Scale Milling</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Plug Removal</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Unbalanced Milling</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>High Temperature Milling</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Fishing</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Tube Cutting</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
+					No more fork lifts or long bed trucks.</p>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
