--- a/views/specifications.rhtml
+++ b/views/specifications.rhtml
@@ -1,8 +1,57 @@
 <div class="top_bg">
-	<div class="container">
+	<div class="container clearfix">
 		<div class="left_col">
 			<img src="/images/features.png" />
 			<h2>Specifications</h2>
+			<br />
+			<a href="#" class="spec_button">
+				General<br /> Specifications
+			</a>
+			<a href="#" class="spec_button">
+				Individual<br /> Specifications
+			</a>
+		</div>
+		<div class="right_col2">
+			<h3>General Specifications</h3>
+			<p class="small">The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
+			<table cellspacing=0 cellpadding=0>
+				<tr class="solid">
+					<td>Motor<br /> Type</td>
+					<td>Torque</td>
+					<td>&gt;350F</td>
+					<td>Nitrogen</td>
+					<td>Acid?</td>
+					<td>Length</td>
+					<td>Maintain</td>
+				</tr>
+				<tr>
+					<td class="left"><img src="/images/mw_logo.png" /></td>
+					<td class="dots">Strong</td>
+					<td class="dots">Yes</td>
+					<td class="dots">Yes</td>
+					<td class="dots">Yes</td>
+					<td class="dots">Shortest</td>
+					<td class="dots">$</td>
+				</tr>
+				<tr>
+					<td class="left">Moineau<br /> Type</td>
+					<td class="dots">Strong</td>
+					<td class="dots">No</td>
+					<td class="dots">No</td>
+					<td class="dots">No</td>
+					<td class="dots">Long</td>
+					<td class="dots">$$$</td>
+				</tr>
+				<tr>
+					<td class="left">Roller<br /> Vane Type</td>
+					<td>Poor</td>
+					<td>Yes</td>
+					<td>Yes</td>
+					<td>Yes</td>
+					<td>Short</td>
+					<td>$$</td>
+				</tr>
+			</table>
 		</div>
 	</div>
 </div>
