--- a/views/contact.rhtml
+++ b/views/contact.rhtml
@@ -1,1 +1,37 @@
-
+<div class="top_bg">
+	<div class="container clearfix">
+		<div class="left_col">
+			<img src="/images/contact.png" />
+			<p>Martini Worldwide is redefining the oil and gas coil tubing industry by providing new technology and tools to increase effectiveness and reduce costs of existing processes.  Powering Innovation is more than a tag line.  It is core to the values of each employee.  We are not satisfied with providing another "me too" type product.  We will not produce a product that will not exceed the capabilities currently in the market.  </p>
+		</div>
+		<div class="right_col">
+			<ul class="resell">
+				<li class="heading">
+					<h3>Give us a call.</h3>
+				</li>
+				<li>
+					<p>The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
+				</li>
+				<li class="heading">
+					<h3>Inquire online.</h3>
+				</li>
+				<li>
+					<p>The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
+					
+					<form id="form">
+						<label for="name">Name:</label>
+						<input type="text" name="name" id="name"/>
+						<label for="email">Email:</label>
+						<input type="text" name="email" id="email"/>
+						<label for="phone">Day Phone:</label>
+						<input type="text" name="phone" id="phone"/>
+						<label for="mobile">Mobile Phone:</label>
+						<input type="text" name="mobile" id="mobile"/>
+						<label for="message">Message:</label>
+						<input type="textarea" name="message" id="message"></textarea>
+					</form>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
