--- a/views/features.rhtml
+++ b/views/features.rhtml
@@ -1,5 +1,5 @@
 <div class="top_bg">
-	<div class="container">
+	<div class="container clearfix">
 		<div class="left_col">
 			<img src="/images/features.png" />
 			<h2>Features</h2>
