--- a/views/home.rhtml
+++ b/views/home.rhtml
@@ -2,38 +2,34 @@
 <div class="boxes">
 <div class="box">
 		<img src="/images/elements.png" class="elements" />
-		<h2>One tool fits all:</h2>
-		<p>Liquid. <br />
-		Nitrogen. <br />
-		High temperature.<br />
-		Acid-resistant. <br />
-		High torque.<br />
-		Special applications.</p>
+		<h2>One tool does it all:</h2>
+		<p>Liquid <br />
+		Nitrogen <br />
+		High temperatures<br />
+		Acid-Resistant <br />
+		High Torque<br />
+		Special Applications</p>
 
-		<p class="small">You name it, the M3 delivers.<br />
-		<a href="#">Read more.</a></p>
+		<p class="small">You name it, the M3 handles it.<br />
+		<a href="/specifications">Read more.</a></p>
 </div>
 
 <div class="box2">
-	<h2>Less is more.</h2>
+	<h2>Less is more. Much More.</h2>
 	<img src="/images/ruler.png" class="ruler" />
 
-	<p class="small">Legacy motors can measure more than 15 feet in length.  The M3 delivers comparable torques 
-	in less than 36 inches. That means easier handling, lower transporations costs and fewer injuries – a new angle for horizontal drilling.<br />
-	<a href="#">Read more.</a></p>
+	<p class="small">Yesterday’s motors are often 10’ long or more.
+	The new M3 delivers comparable torque figures in less than 34 inches.
+	That translates into more maneuverability downhole, lower transportation costs and fewer injuries. Never has less delivered more in performance and benefits – all packed into a compact, manageable length.<br />
+	<a href="/features">Read more.</a></p>
 </div>
 
 <div class="box2">
 		<img src="/images/tools.png" class="tools" />
-	<h2>Greater margins, fewer costs.</h2>
+	<h2>Work longer, spend less.</h2>
 
-	<p class="small">The M3 features the 
-	latest corrosive- and 
-	wear-resistant technology 
-	for  more downhole time 
-	and and the ability to replace 
-	worn out components cost-effectively.
+	<p class="small">The M3 is engineered with the latest corrosive, wear-resistant materials and technology. This keeps it down in the hole working longer.  It’s small size and innovative design keeps, replacement part costs low and allows for quick and efficient redress.
 	<br />
-	<a href="#">Read more.</a></p>
+	<a href="/resellers">Read more.</a></p>
 </div>
 </div>
