--- a/views/resellers.rhtml
+++ b/views/resellers.rhtml
@@ -3,35 +3,28 @@
 		<div class="left_col">
 			<img src="/images/features.png" />
 			<h2>Resellers</h2>
-			<p>Whether its liquid, nitrogen, 
-			corrosive or hot environment, our engineers have put forth a solution that meets all the requirements.  The M3 utilizes a a unique 
-			technology, validated in a virtual environment and tested in the real world.  All this leveraging the latest in materials and tools to provide a motor that will redefine the next generation of this industry.</p>
+			<p>In the ever-changing landscape of our industry, you need every competitive edge to differentiate your company and services. The innovative new technology and capability of the M3 motor will give you that differentiating edge.</p>
 		</div>
 		<div class="right_col">
 			<ul class="resell">
 				<li class="heading">
-					<h3>Differentiate yourself.</h3>
+					<h3>Greater Margins.</h3>
 				</li>
 				<li>
-					<p>The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
+					<p>Replacing expensive rotors, stators and bearing packs frequently will erode your margins. To maintain or increase margins, you need to reduce maintenance costs. The M3 will do just that. It utilizes all the latest materials in a smaller, less complex package that helps keep costs down.</p>
 				</li>
 				<li class="heading">
-					<h3>Larger margins.</h3>
+					<h3>Less to Maintain</h3>
 				</li>
 				<li>
-					<p>The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
+					<p>The M3 has built-in safety systems that prevent premature wear and help eliminate problems downhole. What’s more, all the M3 parts are made of anti-corrosive materials that make clean-up and redress a snap.</p>
 				</li>
 				<li class="heading">
-					<h3>Less to maintain.</h3>
+					<h3>Less Inventory</h3>
 				</li>
 				<li>
-					<p>The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
-				</li>
-				<li class="heading">
-					<h3>Smaller inventory.</h3>
-				</li>
-				<li>
-					<p>The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
+					<p>The M3’s compact size means inventory takes up less space.  It’s easier to handle and transport than older motors. And, because one motor does the job of many, you have less inventory to stock overall.</p>
+					<p>With the new M3 there are no downsides. Just more down hole performance and value.</p>
 				</li>
 			</ul>
 		</div>
