--- a/views/specifications.rhtml
+++ b/views/specifications.rhtml
@@ -3,6 +3,7 @@
 		<div class="left_col">
 			<img src="/images/features.png" />
 			<h2>Specifications</h2>
+			<p>The M3 is revolutionary in terms of size and performance. Its technology, design and construction are truly a breakthrough. When compared to the two leading industry legacy motors, its features are unmatched in virtually every category. Click the comparison links below to see how the M3 measures up.</p>
 			<br />
 			<a href="#" class="spec_button">
 				General<br /> Specifications
@@ -13,7 +14,7 @@
 		</div>
 		<div class="right_col2">
 			<h3>General Specifications</h3>
-			<p class="small">The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
+			<p class="small">The M3 is revolutionary in terms of its size and performance. Its technology, design and construction are truly a breakthrough. When compared to the two leading industry legacy motors, the moineau and roller vane, its features are unmatched in virtually every category.</p>
 			<table cellspacing=0 cellpadding=0>
 				<tr class="solid">
 					<td>Motor<br /> Type</td>
