--- a/views/contact.rhtml
+++ b/views/contact.rhtml
@@ -2,15 +2,20 @@
 	<div class="container clearfix">
 		<div class="left_col">
 			<img src="/images/contact.png" />
-			<p>Martini Worldwide is redefining the oil and gas coil tubing industry by providing new technology and tools to increase effectiveness and reduce costs of existing processes.  Powering Innovation is more than a tag line.  It is core to the values of each employee.  We are not satisfied with providing another "me too" type product.  We will not produce a product that will not exceed the capabilities currently in the market.  </p>
+			<p>Martini Worldwide is redefining the oil and gas well service industry with innovative new tools and technologies that increase effectiveness and reduce costs. “Powering Innovation” is more than just a slogan. It is a core value demonstrated by every Martini associate. We will never settle for offering products that are simply an imitation of an existing design. We are dedicated to innovation and improvement. We are committed to exceeding current capabilities – not to mention exceeding your expectations.</p>
 		</div>
 		<div class="right_col">
 			<ul class="resell">
 				<li class="heading">
-					<h3>Give us a call.</h3>
+					<h3>Like to know more?</h3>
 				</li>
 				<li>
-					<p>The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
+					<p>Please give us a call at (713) 396-3334
+					to speak with a representative.</p>
+					
+					<p>Or send us an email at innovation@martini-worldwide.</p>
+
+					<p>We look forward to introducing you to the incredible performance and revolutionary technology of the M3.</p>
 				</li>
 				<li class="heading">
 					<h3>Inquire online.</h3>
