--- a/views/features.rhtml
+++ b/views/features.rhtml
@@ -3,66 +3,66 @@
 		<div class="left_col">
 			<img src="/images/features.png" />
 			<h2>Features</h2>
-			<p>Whether its liquid, nitrogen, 
-			corrosive or hot environment, our engineers have put forth a solution that meets all the requirements.  The M3 utilizes a a unique 
-			technology, validated in a virtual environment and tested in the real world.  All this leveraging the latest in materials and tools to provide a motor that will redefine the next generation of this industry.</p>
+			<p>Whether its liquid, nitrogen, corrosive or hot environment, our engineers have put forth a solution that meets every requirement the field can throw at it. The M3 utilizes a a unique technology, validated in a virtual environment and tested in the real world. All of this leveraging the latest in materials and tools to provide a motor that will redefine the next generation of this industry.</p>
 		</div>
 		<div class="right_col">
 			<ul class="accordian">
 				<li>
-					<h3>Size Matters.</h3>
+					<h3>Compact Length</h3>
 					<div class="extra">
 					<img src="/images/example.png" />
-					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
-					No more fork lifts or long bed trucks.</p>
+					<p>In a world of 10’ plus motors, the M3 sets an all-new standard at less than 34 inches. Its innovative design and technology deliver unbelievable power and performance. And it’s compact length makes handling easy – no more fork lifts or long bed trucks required.  Unmatched maneuverability and horizontal drilling provides access to more pay zones.</p>
 					</div>
 				</li>
 				<li>
-					<h3>Unbelievable Torque.</h3>
+					<h3>Maximum Power &amp; Torque</h3>
 					<div class="extra">
 					<img src="/images/example.png" />
-					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
-					No more fork lifts or long bed trucks.</p>
+					<p>We built the M3 from the ground up to deliver superior performance. Legacy Moineau motors had a reputation for providing consistent torque. The M3 delivers even more – enough to meet most any need. Nothing can touch the M3’s size and strength.</p>
 					</div>
 				</li>
 				<li>
-					<h3>Liquid or Nitrogen.</h3>
+					<h3>Compatible with Liquid or Nitrogen</h3>
 					<div class="extra">
 					<img src="/images/example.png" />
-					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
-					No more fork lifts or long bed trucks.</p>
+					<p>The M3 operates on both liquid or gas. Pressure and density changes don’t affect it.
+					Older Moineau motors generally have a short life when operated on nitrogen and require costly
+					repairs. And roller type vane motors that run on liquid and nitrogen just can’t produce the torque needed for many applications. The M3 eliminates these shortcomings.</p>
 					</div>
 				</li>
 				<li>
-					<h3>Built in Safety.</h3>
+					<h3>High Temperature Resistant</h3>
 					<div class="extra">
 					<img src="/images/example.png" />
-					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
-					No more fork lifts or long bed trucks.</p>
+					<p>500&deg;? No sweat for the M3. Where most legacy Moineau type motors can’t handle anything over 325&deg;, the M3’s lack of rubber components lets it easily withstand consistent environments of up to 525&deg; F.</p>
 					</div>
 				</li>
 				<li>
-					<h3>Lean on Me.</h3>
+					<h3>Safety Built In</h3>
 					<div class="extra">
 					<img src="/images/example.png" />
-					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
-					No more fork lifts or long bed trucks.</p>
+					<p>Keeping a motor running downhole as long as possible is the name of the game. Older motors can be susceptible to pressure fluctuations, windups or stator blowouts. The M3 maintains constant pressure on the motor and exhausts additional pressure. This keeps motor components safe, removing the possibility of damaging wind up. </p>
 					</div>
 				</li>
 				<li>
-					<h3>Reduced Costs.</h3>
+					<h3>More Weight on Bit</h3>
 					<div class="extra">
 					<img src="/images/example.png" />
-					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
-					No more fork lifts or long bed trucks.</p>
+					<p>Leveraging the latest CAE tools with advanced materials and configuration, we gave the M3 the capability to withstand more weight on bit than any comparable sized motor. It’s a marvel of engineering.</p>
 					</div>
 				</li>
 				<li>
-					<h3>Acid Resistant.</h3>
+					<h3>Cost Effective Operation</h3>
 					<div class="extra">
 					<img src="/images/example.png" />
-					<p>In a legacy world of 10 ft plus motors.  The M3 sets the bar very high.  Good things come in small packages.  The innovative design combines the latest technology and materials to deliver unbelievable power.  The  reduces length makes handling easier than ever.  
-					No more fork lifts or long bed trucks.</p>
+					<p>Legacy motors are expensive to maintain. Their complex stators and rotors can cost many thousands to replace – for potentially only another 200 hours of service. With the M3, when parts wear, a redress of the tool returns it to working condition and ready to turn again without those expensive parts to replace.</p>
+					</div>
+				</li>
+				<li>
+					<h3>Acid Resistant</h3>
+					<div class="extra">
+					<img src="/images/example.png" />
+					<p>Sometimes operators want to mix acids with drilling fluid. Motors with rubber stators and carbon based metals cannot withstand this use. The M3 components are acid-resistant, and will provide the long run time you expect in the harshest conditions.</p>
 					</div>
 				</li>
 			</ul>
